--- a/style.css
+++ b/style.css
@@ -1,41 +1,63 @@
 /* ============================= */
 /* ===== Allgemeine Styles ===== */
 /* ============================= */
+.section-style-2 {
+  background-color: #a0e9ee;
+  color: white;
+}
 
-/* Dein Code */
+.grosser-titel {
+  font-size: 60px;
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.kleiner-titel {
+  font-size: 30px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.btn {
+  font-family: 'Courier New', Courier, monospace;
+}
 
 /* ======================================= */
 /* ===== Section 1: Navigationszeile ===== */
 /* ======================================= */
 
-/* Dein Code */
+
 
 /* ================================ */
 /* ===== Section 2: Überblick ===== */
 /* ================================ */
 
-.section-style-2 {
-    background-color: #a0e9ee;
-    color: white;
-  }
-  .grosser-titel {
-    font-size: 60px;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
-  .kleiner-titel {
-    font-size: 30px;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  .btn {
-    font-family: 'Courier New', Courier, monospace;
-  }
+.pic-for-app {
+  align-content: center;
+  width: 75%;
+  border-radius: 5%;
+  transform: rotate(5deg); }
+
+#überblick {
+  padding: 10%;
+}
+
+.btn {
+  margin: 5% 0;
+}
+
 /* =============================== */
 /* ===== Section 3: Features ===== */
 /* =============================== */
 
-/* Dein Code */
+.section-style-1 {
+  background-color: rgb(50, 172, 202);
+  color:white;
+
+}
+
+.feature-box {
+  padding: 5%;
+}
 
 /* ================================== */
 /* ===== Section 4: Bewertungen ===== */
